<resources>
    <string name="app_name">GGUM</string>
    <string name="empty"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">값을 불러오지 못했습니다.</string>
    <string name="menu_error">식단표 정보가 없습니다.</string>

    <!-- Main Text -->
    <string name="main_notice">공지사항</string>
    <string name="main_menu">오늘의 학식</string>
    <string name="main_bus">현재 탈 수 있는 덕성 버스는?</string>

    <!-- nav Text -->
    <string name="nav_home">홈</string>
    <string name="nav_notice">공지</string>
    <string name="nav_menu">식단표</string>
    <string name="nav_bus">버스시간표</string>
    <string name="nav_delivery">배달음식</string>
    <string name="nav_more">더보기</string>
    <string name="nav_login">로그인</string>

    <!-- menu Text -->
    <string name="menu">식단표</string>
    <string name="menu_top_title">오늘 뭐먹지?</string>
    <string name="menu_bottom_title">금주의 식단</string>
    <string name="menu_timetable">학교 식단표 바로가기 ></string>
    <string name="menu_breakfast">조식</string>
    <string name="menu_lunch">중식</string>
    <string name="menu_dinner">석식</string>

    <!-- bus Text -->
    <string name="bus">버스시간표</string>
    <string name="bus_title">쉽게 확인하고\n버스 놓치지 말자!</string>
    <string name="bus_school_timetable">학교버스 시간표 바로가기 ></string>
    <string name="bus_duksung">덕성여객 시간표</string>
    <string name="ter_to_bus">터미널 > 학교</string>
    <string name="bus_to_ter">학교 > 터미널</string>

    <!-- delivery -->
    <string name="delivery">꾸르맛집</string>

    <!-- more -->
    <string name="more">더보기</string>

    <!-- login -->
    <string name="login">로그인</string>
    <string name="login_id">ID</string>
    <string name="login_pw">PW</string>
    <string name="login_state">로그인 상태 유지</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_pw">비밀번호 찾기</string>
    <string name="regist">회원가입</string>
    <string name="empty_idpw">아이디나 패스워드는 빈칸일 수 없습니다.</string>
    <string name="wrong_idpw">아이디나 패스워드가 올바르지 않습니다.</string>
    <string name="login_err">연결 중 오류가 발생했습니다. 잠시 후 시도해주세요.</string>

</resources>
